# riftlens

./: .env.example  .gitignore  .npmrc  README.md  TODO.md  biome.json  package.json  pnpm-lock.yaml  turbo.json
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  deploy-web.yml  release-desktop.yml
apps/desktop/: next.config.ts  package.json  tsconfig.json
apps/desktop/app/: layout.tsx  page.tsx
apps/desktop/hooks/: useLCUPolling.ts  useProfileDashboard.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: generate.py  icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: champ_select.rs  game_flow.rs  mod.rs  profile.rs  runes.rs  summoner.rs
apps/desktop/src-tauri/src/lcu/: auth.rs  client.rs  mod.rs  process.rs
apps/mobile/: package.json  tsconfig.json
apps/mobile/app/: _layout.tsx
apps/web/: next.config.ts  package.json  proxy.ts  tsconfig.json  vercel.json  vitest.config.ts
apps/web/app/: error.tsx  globals.css  icon.tsx  layout.tsx  manifest.ts  not-found.tsx  opengraph-image.tsx  page.tsx  providers.tsx  robots.ts  sitemap.ts
apps/web/components/: Link.tsx  QueryProvider.tsx
apps/web/hooks/: useAverageRank.ts  useChallenges.ts  useChampionRotation.ts  useChampionStats.ts  useChampions.ts  useCoaching.ts  useFeaturedGames.ts  useItems.ts  useLadderRank.ts  useLiveGame.ts  useLiveStatus.ts  useLpHistory.ts  useLpPerGame.ts  useMastery.ts  useMatchDetail.ts  useMatchFilter.ts  useMatchHistory.ts  useMatchTimeline.ts  useMatches.ts  (+8 more)
(+172 files in other folders)
